--- a/packages/lexical-playground/package.json
+++ b/packages/lexical-playground/package.json
@@ -29,6 +29,7 @@
     "lexical": "0.4.1",
     "link-preview-generator": "1.0.7",
     "lodash-es": "^4.17.21",
+    "oembed-parser": "^3.0.9",
     "prettier": "^2.3.2",
     "react": "^18.0.0-alpha-64931821a-20210808",
     "react-dom": "^18.0.0-alpha-64931821a-20210808",
